--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -210,8 +210,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;1 /</font></a>
-          <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch&nbsp;3</font></a>
+        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;1 /</font><font class="mobile">Previous Article /</font></a>
+        <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;3</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
