--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;2 /</font></a>
-          <a class="nav-next" href="../history-of-elephants-ivory/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Ivory</font></a>
+          <a class="nav-previous" href="../book-of-ella-2/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;2 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-ivory/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Ivory</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
