--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -168,8 +168,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Kenya /</font></a>
-          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch&nbsp;3</font></a>
+          <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="desktop">Elephant Conservation in Kenya /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="desktop">/ Making of Ella Ch&nbsp;3</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
