--- a/scene/one/companion-app-augmented-reality-kit/index.html
+++ b/scene/one/companion-app-augmented-reality-kit/index.html
@@ -53,8 +53,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch&nbsp;4 /</font></a>
-          <!-- <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Companion App &ndash;&nbsp;Beta</font></a> -->
+          <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;4 /</font><font class="mobile">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="desktop">/ Companion App &ndash;&nbsp;Beta</font><font class="mobile">/ Next Article</font></a> -->
         </div>
       </div>
 
