--- a/scene/one/companion-app-augmented-reality/index.html
+++ b/scene/one/companion-app-augmented-reality/index.html
@@ -130,8 +130,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch&nbsp;1 /</font></a>
-          <a class="nav-next" href="../elephant-conservation-africa/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Africa</font></a>
+          <a class="nav-previous" href="../making-of-ella/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;1 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-africa/" rel="next"><font class="desktop">/ Elephant Conservation in Africa</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
