--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -55,8 +55,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../companion-app-augmented-reality-kit/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Augmented Reality Kit /</font></a>
-          <!-- <a class="nav-next" href="../companion-app-soundtrack/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Companion App &ndash; Soundtrack</font></a> -->
+          <a class="nav-previous" href="../companion-app-augmented-reality-kit/" rel="prev"><font class="desktop">Augmented Reality Kit /</font><font class="mobile">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../companion-app-soundtrack/" rel="next"><font class="desktop">/ Companion App &ndash; Soundtrack</font><font class="mobile">/ Next Article</font></a> -->
         </div>
       </div>
 
