--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -160,8 +160,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Augmented Reality Application /</font></a>
-          <a class="nav-next" href="../reference-art/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reference Art &ndash; History</font></a>
+          <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="desktop">Augmented Reality Application /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../reference-art/" rel="next"><font class="desktop">/ Reference Art &ndash; History</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
