--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -287,8 +287,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-kavango/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reconnaissance in Kavango /</font></a>
-          <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="mobile">Next Article /</font><font class="desktop">Making of Ella Ch&nbsp;4 /</font></a> -->
+          <a class="nav-previous" href="../elephant-conservation-kavango/" rel="prev"><font class="desktop">Reconnaissance in Kavango /</font><font class="mobile">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="desktop">Making of Ella Ch&nbsp;4 /</font><font class="mobile">Next Article /</font></a> -->
         </div>
       </div>
 
