--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -245,8 +245,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Lights /</font></a>
-          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Namibia</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Lights /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="desktop">/ Elephant Conservation in Namibia</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
