--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -198,8 +198,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch&nbsp;2 /</font></a>
-          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch&nbsp;4</font></a>
+          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;2 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;4</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
