--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -438,8 +438,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary-big-tuskers/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Feature /</font></a>
-          <a class="nav-next" href="../elephant-conservation-amboseli/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Amboseli</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-big-tuskers/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Feature /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-amboseli/" rel="next"><font class="desktop">/ Elephant Conservation in Amboseli</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
