--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -245,8 +245,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary-lens/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Cameras /</font></a>
-          <a class="nav-next" href="../history-of-elephants-charter/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Charter</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-lens/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Cameras /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-charter/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Charter</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
