--- a/scene/one/history-of-elephants-charter/index.html
+++ b/scene/one/history-of-elephants-charter/index.html
@@ -310,8 +310,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants-anatomy/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephants &ndash; Anatomy /</font></a>
-          <a class="nav-next" href="../wildlife-documentary/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Wildlife Documentary &ndash; Action</font></a>
+          <a class="nav-previous" href="../history-of-elephants-anatomy/" rel="prev"><font class="desktop">A History of Elephants &ndash; Anatomy /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Action</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
