--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -447,8 +447,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;3 /</font></a>
-          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch&nbsp;2</font></a>
+          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;3 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="desktop">/ Making of Ella Ch&nbsp;2</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
