--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch&nbsp;3 /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-lens/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Wildlife Documentary &ndash; Cameras</font></a>
+          <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;3 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-lens/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Cameras</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
