--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.vimeo.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -83,8 +83,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants-ivory/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephants &ndash; Ivory /</font></a>
-          <a class="nav-next" href="../elephant-conservation-kenya/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Kenya</font></a>
+          <a class="nav-previous" href="../history-of-elephants-ivory/" rel="prev"><font class="desktop">A History of Elephants &ndash; Ivory /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-kenya/" rel="next"><font class="desktop">/ Elephant Conservation in Kenya</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
