--- a/scene/one/making-of-ella-4/index.html
+++ b/scene/one/making-of-ella-4/index.html
@@ -50,8 +50,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-angola/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Ghost Elephants in Angola /</font></a>
-          <a class="nav-next" href="../companion-app-augmented-reality-kit/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Augmented Reality Kit</font></a>
+          <a class="nav-previous" href="../elephant-conservation-angola/" rel="prev"><font class="desktop">Ghost Elephants in Angola /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../companion-app-augmented-reality-kit/" rel="next"><font class="desktop">/ Augmented Reality Kit</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
