--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-africa/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Africa /</font></a>
-          <a class="nav-next" href="../reference-art-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reference Art &ndash; Imagery</font></a>
+          <a class="nav-previous" href="../elephant-conservation-africa/" rel="prev"><font class="desktop">Elephant Conservation in Africa /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../reference-art-2/" rel="next"><font class="desktop">/ Reference Art &ndash; Imagery</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
