--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -159,8 +159,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-amboseli/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Amboseli /</font></a>
-          <a class="nav-next" href="../elephant-conservation-botswana/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Botswana</font></a>
+          <a class="nav-previous" href="../elephant-conservation-amboseli/" rel="prev"><font class="desktop">Elephant Conservation in Amboseli /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-botswana/" rel="next"><font class="desktop">/ Elephant Conservation in Botswana</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
