--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -135,8 +135,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Action /</font></a>
-          <a class="nav-next" href="../elephant-conservation-nairobi/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Nairobi</font></a>
+          <a class="nav-previous" href="../wildlife-documentary/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Action /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-nairobi/" rel="next"><font class="desktop">/ Elephant Conservation in Nairobi</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
