--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -270,8 +270,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants-charter/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephants &ndash; Charter /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-big-tuskers/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Wildlife Documentary &ndash; Feature</font></a>
+          <a class="nav-previous" href="../history-of-elephants-charter/" rel="prev"><font class="desktop">A History of Elephants &ndash; Charter /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-big-tuskers/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Feature</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
