--- a/scene/two/history-of-the-forest-and-the-trees/index.html
+++ b/scene/two/history-of-the-forest-and-the-trees/index.html
@@ -335,8 +335,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../siberian-tiger-project/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Tiger Conservation in Siberia /</font></a>
-          <a class="nav-next" href="../the-beginning-of-exhibiting/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Beginning of Exhibiting</font></a>
+          <a class="nav-previous" href="../siberian-tiger-project/" rel="prev"><font class="desktop">Tiger Conservation in Siberia /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../the-beginning-of-exhibiting/" rel="next"><font class="desktop">/ The Beginning of Exhibiting</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
