--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -264,8 +264,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Wildlife Documentary &ndash; Picture /</font></a> -->
-          <a class="nav-next" href="../the-second-chapter/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Second Chapter</font></a>
+          <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Picture /</font><font class="mobile">Previous Article /</font></a> -->
+          <a class="nav-next" href="../the-second-chapter/" rel="next"><font class="desktop">/ The Second Chapter</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
