--- a/scene/two/the-second-chapter/index.html
+++ b/scene/two/the-second-chapter/index.html
@@ -185,8 +185,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../the-beginning-of-painting/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Beginning of Painting /</font></a>
-          <a class="nav-next" href="../tiger-conservation-siberia/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Tiger Conservation in Siberia</font></a>
+          <a class="nav-previous" href="../the-beginning-of-painting/" rel="prev"><font class="desktop">The Beginning of Painting /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../tiger-conservation-siberia/" rel="next"><font class="desktop">/ Tiger Conservation in Siberia</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
