--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -145,8 +145,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../reference-art-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reference Art &ndash; Imagery /</font></a>
-          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch&nbsp;2</font></a>
+          <a class="nav-previous" href="../reference-art-2/" rel="prev"><font class="desktop">Reference Art &ndash; Imagery /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;2</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
