--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src player.vimeo.com; img-src animathabitat.com; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; img-src animathabitat.com; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -203,8 +203,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-nairobi/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Nairobi /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Wildlife Documentary &ndash; Lights</font></a>
+          <a class="nav-previous" href="../elephant-conservation-nairobi/" rel="prev"><font class="desktop">Elephant Conservation in Nairobi /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-2/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Lights</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
