--- a/scene/one/elephant-conservation-kavango/index.html
+++ b/scene/one/elephant-conservation-kavango/index.html
@@ -57,8 +57,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-zambezi/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Zambezi /</font></a>
-          <a class="nav-next" href="../elephant-conservation-angola/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Angola</font></a>
+          <a class="nav-previous" href="../elephant-conservation-zambezi/" rel="prev"><font class="desktop">Elephant Conservation in Zambezi /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-angola/" rel="next"><font class="desktop">/ Elephant Conservation in Angola</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
