--- a/scene/one/elephant-conservation-namibia/index.html
+++ b/scene/one/elephant-conservation-namibia/index.html
@@ -49,8 +49,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-botswana/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Botswana /</font></a>
-          <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Reconnaissance in Kavango</font></a>
+          <a class="nav-previous" href="../elephant-conservation-botswana/" rel="prev"><font class="desktop">Elephant Conservation in Botswana /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="desktop">/ Reconnaissance in Kavango</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
