--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -120,8 +120,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch&nbsp;4 /</font></a>
-          <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Preface</font></a>
+          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;4 /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Preface</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
