--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -356,8 +356,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephants &ndash; Preface /</font></a>
-          <a class="nav-next" href="../history-of-elephants-anatomy/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Anatomy</font></a>
+          <a class="nav-previous" href="../history-of-elephants/" rel="prev"><font class="desktop">A History of Elephants &ndash; Preface /</font><font class="mobile">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-anatomy/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Anatomy</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
