--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -86,7 +86,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/geo/kavango-zambezi.map.color.nm.png" />
-        <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>]</p>
+        <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>, edited and recolored]</p>
 
       </div>
 
